# fed-yolo

./: .gitignore  README.md  pyproject.toml  simulation.py
obj_yolo/: .env  .env.example  __init__.py  client.py  config.py  data_prep.py  dataset.py  server.py  simulation.py  strategy.py  utils.py  yolo11n_baseline.yaml
obj_yolo/strategy/: fedadam.py  fedavg.py  fedprox.py  strategy_utils.py
ultralytics/cfg/: __init__.py  default.yaml
ultralytics/engine/: trainer.py
yolo_config/: yolo8.yaml
