[project]
name = "obj-yolo"
version = "2.0.0"
description = "federated learning environment for yolo model"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    {name = "RaghuRam2005", email="atommail20@gmail.com"}
]

dependencies = [
    "dotenv >=0.9.9",
    "flask >=3.1.1",
    "pathlib >=1.0.1",
    "pynvml >=12.0.0",
    "requests >=2.32.4",
    "torch >=2.8.0",
    "torchvision >=0.23.0",
    "ultralytics >=8.3.177",
    "PyYAML>=6.0.2",
    "flwr==1.19.0",
]

[tool.setuptools]
packages = ["obj_yolo"]
